--- a/app/src/main/res/layout/activity_questionnaire.xml
+++ b/app/src/main/res/layout/activity_questionnaire.xml
@@ -77,7 +77,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="?attr/colorAccent"
-                android:text="Description"
+                android:text="@string/description"
                 android:textSize="@dimen/article_titles"
                 android:layout_marginBottom="@dimen/md_keylines" />
 
@@ -85,14 +85,14 @@
                 android:id="@+id/questionnaire_details_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="Detail description" />
+                tools:text="Lorem ipsum dolor sit amet" />
 
             <!-- Created by -->
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="?attr/colorAccent"
-                android:text="Created by"
+                android:text="@string/created_by"
                 android:layout_marginBottom="@dimen/md_keylines"
                 android:layout_marginTop="@dimen/md_keylines"
                 android:textSize="@dimen/article_titles"/>
@@ -121,64 +121,6 @@
                 android:autoLink="web"
                 android:id="@+id/questionnaire_details_website" />
 
-            <!-- Uses Location -->
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="?attr/colorAccent"
-                android:text="@string/uses_location"
-                android:textSize="@dimen/article_titles"
-                android:layout_marginBottom="@dimen/md_keylines"
-                android:layout_marginTop="@dimen/md_keylines"
-                android:id="@+id/usesLocationText" />
-
-            <com.joanzapata.iconify.widget.IconTextView
-                android:text="@string/fa_check"
-                android:visibility="gone"
-                tools:visibility="visible"
-                android:textSize="20sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/md_keylines"
-                android:layout_marginTop="@dimen/md_keylines"
-                android:id="@+id/usesLocationCheck"/>
-
-            <com.joanzapata.iconify.widget.IconTextView
-                android:text="@string/fa_cross"
-                android:visibility="gone"
-                android:textSize="20sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/usesLocationCross"/>
-
-            <!-- Uses photo -->
-            <TextView
-                android:text="@string/uses_photo"
-                android:textColor="?attr/colorAccent"
-                android:textSize="20sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/md_keylines"
-                android:layout_marginTop="@dimen/md_keylines"
-                android:id="@+id/usesPhotoText" />
-
-            <com.joanzapata.iconify.widget.IconTextView
-                android:text="@string/fa_check"
-                android:textSize="20sp"
-                android:visibility="gone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/usesPhotoCheck"/>
-
-            <com.joanzapata.iconify.widget.IconTextView
-                android:text="@string/fa_cross"
-                android:textSize="20sp"
-                android:visibility="gone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/usesPhotoCross"/>
-
-
             <!-- Downloaded date -->
             <TextView
                 android:layout_width="wrap_content"
@@ -192,8 +134,71 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="New Text"
+                tools:text="11/12/2016"
                 android:id="@+id/questionnaire_details_installed" />
+
+            <!-- Details -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="?attr/colorAccent"
+                android:text="Details"
+                android:textSize="@dimen/article_titles"
+                android:layout_marginBottom="@dimen/md_keylines"
+                android:layout_marginTop="@dimen/md_keylines" />
+            <!-- Uses Location -->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/uses_location"
+                    android:id="@+id/usesLocationText" />
+
+                <com.joanzapata.iconify.widget.IconTextView
+                    android:text="@string/fa_check"
+                    android:visibility="gone"
+                    tools:visibility="visible"
+                    android:textSize="20sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/usesLocationCheck"/>
+
+                <com.joanzapata.iconify.widget.IconTextView
+                    android:text="@string/fa_cross"
+                    android:visibility="gone"
+                    android:textSize="20sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/usesLocationCross"/>
+            </LinearLayout>
+            <!-- Uses photo -->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:text="@string/uses_photo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/usesPhotoText" />
+
+                <com.joanzapata.iconify.widget.IconTextView
+                    android:text="@string/fa_check"
+                    android:textSize="20sp"
+                    android:visibility="gone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/usesPhotoCheck"/>
+
+                <com.joanzapata.iconify.widget.IconTextView
+                    android:text="@string/fa_cross"
+                    android:textSize="20sp"
+                    android:visibility="gone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/usesPhotoCross"/>
+                </LinearLayout>
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
@@ -205,7 +210,7 @@
         app:layout_anchor="@id/appbar"
         android:id="@+id/questionnaire_fab"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
-        app:srcCompat="@drawable/ic_add"
-        android:tint="@color/white"
-        app:layout_anchorGravity="bottom|right|end" />
+        android:background="@drawable/cropped"
+        app:layout_anchorGravity="bottom|right|end"
+        android:src="@drawable/fab_add" />
 </android.support.design.widget.CoordinatorLayout>
